<resources>
    <string name="app_name">What should I play</string>
    <string name="game_selection">What should I play?</string>
    <string name="add_game">Add game</string>
    <string name="game_library">My library</string>
    <string name="configure">Configure App</string>

    <string name="game_name_input">Name of game</string>
    <string name="add_new_game">Add new game</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>

    <string name="multiplayer">Multiplayer?</string>
    <string name="completed">Completed?</string>
    <string name="include_completed">Include completed?</string>
    <string name="selection_genre_query">Do you want to play a specific genre?</string>
    <string name="selection_platform_query">Do you want to play on a specific platform?</string>
    <string name="find_me_a_game">Find me a game!</string>

    <string name="game_library_description">Your library. Tap to edit.</string>
    <string name="add_another_game">Add another game</string>
    <string name="back_to_home">Go to homepage</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="library_options">How would you like to view your library?</string>
    <string name="library_all">View all games</string>
    <string name="library_filtered">Filter Games</string>

    <string name="library_filter_main">Filter using the options below:</string>
    <string name="library_filter_genre">Which genre?</string>
    <string name="library_filter_platform">Which platform?</string>
    <string name="show_filter_library">Show filtered library</string>

    <string name="add_genre">Add genre</string>
    <string name="add_platform">Add platform</string>
    <string name="genre_name_input">Genre name</string>
    <string name="platform_name_input">Platform name</string>
    <string name="home">Home</string>
    <string name="library">Library</string>

</resources>